--- a/index.html
+++ b/index.html
@@ -9,29 +9,63 @@
 <body>
     <h1>Hoja de vida</h1>
     <div class="contenedor-principal">
-        <img class="imagen" src="https://image.winudf.com/v2/image1/bmV0LndsbHBwci5ib3lzX3Byb2ZpbGVfcGljdHVyZXNfc2NyZWVuXzJfMTY2NzUzNzYxOF8wNDY/screen-2.webp?fakeurl=1&type=.webp" alt="Imagen de perfil">
+        <img class="imagen" src="https://i.pinimg.com/originals/04/b7/0e/04b70e879fd98bae807cceb835df6566.gif" alt="Imagen de perfil">
         <p class="nombre-principal">Harol Santiago Ibañez Garzon</p>
     </div>
 <hr> 
-<div class="t-secundario">
-    <br><br>
-    <p>Telofono: <strong><i class="texto-i">+57 XXX XXX XXXX</i></strong></p>
-    <p>Direccion: <strong><i class="texto-i">Calle 52 #18-32</i></strong></p>
-    <p>Correo: <strong><i class="texto-i">Sg1672@gmail.com</i></strong></p>
-    <p>Profesion: <strong><i class="texto-i">Programador de software</i></strong></p>
+<br>
+        <p>Telofono: <strong><i class="texto-i">+57 XXX XXX XXXX</i></strong></p>
+        <p>Direccion: <strong><i class="texto-i">Calle 52 #18-32</i></strong></p>
+        <p>Correo: <strong><i class="texto-i">Sg1672@gmail.com</i></strong></p>
+        <p>Profesion: <strong><i class="texto-i">Programador de software</i></strong></p>
+        <br>    
+        <hr>
+<table>
+<td>
+    <div class="t-secundario">
+        <div class="contenedor1">
+        <h2 class="yo">Sobre mí</h2>
+            <p class="texto-f">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, placeat voluptate eveniet autem amet fuga qui. Corrupti obcaecati corporis illo, eos libero aliquid eligendi doloremque in explicabo delectus enim porro.
+            Aliquam nulla quis veniam nemo pariatur officiis laborum provident debitis fugit consequatur, quasi sit commodi voluptates voluptate esse mollitia, natus ea excepturi modi. Eveniet cupiditate odio recusandae consectetur sit asperiores.
+            Hic provident iusto cupiditate adipisci dolorem rem dolor totam maiores reiciendis dolore veniam, ut eaque libero aliquam sit voluptatem nam doloremque illum laboriosam suscipit accusamus quia. Quaerat nobis a dolor.
+            Repudiandae officia quae, tenetur, aut aliquam mollitia iusto facilis dolorem deserunt eligendi quibusdam autem ipsa perspiciatis. Ea facilis ad beatae omnis, adipisci obcaecati, ducimus error atque laborum, animi laudantium deleniti?</p>
+        <h3 class="idiomas">Idiomas</h3>
+            <p>
+                <li class="texto-f">Español (nativo)</li>
+                <li class="texto-f"> Ingles (basico)</li>
+                <li class="texto-f">Frances (basico)</li>
+            </p>
+        <h3 class="aficiones">Aficiones</h3>
+        <p class="texto-f">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, doloribus corrupti cumque dolorum distinctio voluptatum impedit quae laborum, itaque, iste consequatur. Aspernatur accusantium deleniti asperiores magni error molestias cum nemo.</p>
+        </div>
+        <div class="image2">
+            <img class="image2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Sena_Colombia_logo.svg/1200px-Sena_Colombia_logo.svg.png" alt="logo sena">
+        </div>
+</td>  
+<td>
+<div class="contenedor-general">
+        <h2 class="t-perfil">Perfil profesional</h2>
+            <p class="texto-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora laboriosam illum maiores, perferendis dignissimos modi fugiat asperiores esse, a odit iusto iste ad culpa dolore excepturi! Nostrum pariatur vero voluptatem.
+            Cum, iste. Eligendi illo, vero aspernatur porro eos quas doloremque officia veritatis facilis, magni sed maiores. Praesentium aliquid iure natus quod unde deseruntab, quo aliquam fugit, magni ipsa perspiciatis.
+            Eum mollitia libero odit ducimus autem fugit fuga dolor quis est consequuntur ab nisi, reiciendis rerum doloribus minus necessitatibus error quo! Suscipit  molestiae illum velit dolor odit ab dolore dolorem!
+            Adipisci ea sapiente perferendis minus culpa, unde dicta id, suscipit quam quibusdam enim. Totam voluptatem ducimus voluptatibus tenetur quod rem reiciendis ad doloremque odio fuga! Quo asperiores ducimus quia delectus?
+            Sed, consectetur accusamus, consequuntur voluptate odit cupiditate voluptatibus maiores vero nulla similique, error necessitatibus iusto quas voluptatum    praesentium vitae dolorem vel ipsam voluptatem adipisci asperiores ex? Harum nihil quae dolor?</p>
+        <h3 class="t-experiencia">Experiencia laboral</h3>
+            <p class="texto-f">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dignissimos, pariatur perferendis odio id unde rem libero, quo veniam, numquam     modi molestias sapiente doloribus accusamus consequatur mollitia veritatis aspernatur nam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur     hic, obcaecati temporibus qui corporis aliquam quo dicta distinctio architecto eius cum quos explicabo eaque tenetur possimus nobis ipsa, dolorem quasi. Lorem  ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto veniam aliquid fuga, quam, aliquam laboriosam animi labore neque vel unde delectus porro facilis  illo velit. Veniam quasi hic ex!</p>
     <hr>
-    <h3 class="t-experiencia">Experiencia laboral</h3>
-    <p class="texto-f">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dignissimos, pariatur perferendis odio id unde rem libero, quo veniam, numquam modi molestias sapiente doloribus accusamus consequatur mollitia veritatis aspernatur nam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur hic, obcaecati temporibus qui corporis aliquam quo dicta distinctio architecto eius cum quos explicabo eaque tenetur possimus nobis ipsa, dolorem quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto veniam aliquid fuga, quam, aliquam laboriosam animi labore neque vel unde delectus porro facilis illo velit. Veniam quasi hic ex!</p>
+        <h3 class="t-educacion">Educacion</h3>
+            <p class="texto-f">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut odit deleniti harum sit vero. Beatae fugiat cum magnam sint veritatis voluptatem    animi accusamus odio sit, voluptates mollitia doloribus tenetur voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium molestias sed unde,    impedit natus totam explicabo iusto minus accusamus iure amet necessitatibus aut tempore sequi labore deserunt. Repellat, at recusandae.
+            Sit itaque dolores, doloribus atque adipisci voluptatibus beatae distinctio minus dolor doloremque eaque non aliquid reprehenderit voluptates impedit, cupiditate   nemo obcaecati quibusdam! Eveniet quibusdam aut distinctio eos aperiam praesentium. Sint?
+            Error alias dignissimos sed vero, eos voluptatum, eaque mollitia iusto quos reprehenderit itaque fuga atque velit ducimus. Sunt autem, sed numquam quasi, est   necessitatibus nesciunt, enim exercitationem repudiandae nisi rem!</p>
     <hr>
-    <h3 class="t-educacion">Educacion</h3>
-    <p class="texto-f">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut odit deleniti harum sit vero. Beatae fugiat cum magnam sint veritatis voluptatem animi accusamus odio sit, voluptates mollitia doloribus tenetur voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium molestias sed unde, impedit natus totam explicabo iusto minus accusamus iure amet necessitatibus aut tempore sequi labore deserunt. Repellat, at recusandae.
-    Sit itaque dolores, doloribus atque adipisci voluptatibus beatae distinctio minus dolor doloremque eaque non aliquid reprehenderit voluptates impedit, cupiditate nemo obcaecati quibusdam! Eveniet quibusdam aut distinctio eos aperiam praesentium. Sint?
-    Error alias dignissimos sed vero, eos voluptatum, eaque mollitia iusto quos reprehenderit itaque fuga atque velit ducimus. Sunt autem, sed numquam quasi, est necessitatibus nesciunt, enim exercitationem repudiandae nisi rem!</p>
-    <hr>
-    <h3 class="t-referencia">Referencia</h3>
-    <p class="texto-f">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam odio est voluptatum reprehenderit consectetur nihil tenetur corrupti vitae molestiae id quia enim, non at? Voluptas, beatae quod! Provident, ducimus dolor?
-    Inventore, aut, officia doloremque saepe iusto ex fugit repellendus quisquam eveniet blanditiis repellat ducimus nostrum repudiandae aliquid accusantium! Rem officiis consequatur pariatur cum voluptate repellendus enim consectetur aspernatur atque ducimus?</p>
-</div>       
+        <h3 class="t-referencia">Referencia</h3>
+            <p class="texto-f">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam odio est voluptatum reprehenderit consectetur nihil tenetur corrupti vitae  molestiae id quia enim, non at? Voluptas, beatae quod! Provident, ducimus dolor?
+            Inventore, aut, officia doloremque saepe iusto ex fugit repellendus quisquam eveniet blanditiis repellat ducimus nostrum repudiandae aliquid accusantium! Rem   officiis consequatur pariatur cum voluptate repellendus enim consectetur aspernatur atque ducimus?</p>
+    </div> 
+</div>  
+</td>
+</table>
+
 
     
 </body>
